# FH6-Radio-Bridge

./: .editorconfig  .gitattributes  .gitignore  README.md  THIRD_PARTY_NOTICES.md
bridge/: FH6RadioBridge.sln
bridge/src/FH6RadioBridge/: FH6RadioBridge.csproj  Program.cs
bridge/src/TestReceiver/: Program.cs  TestReceiver.csproj
docs/: ARCHITECTURE.md  DEV_PLAN.md  FMOD_CALLBACK_PLAN.md  GITHUB_PUBLISH_CHECKLIST.md  IPC_PROTOCOL.md  SAFETY_AND_LEGAL.md
hook/: CMakeLists.txt
hook/src/: dllmain.cpp  fmod_memory_probe.cpp  fmod_memory_probe.h  fmod_radio_injector.cpp  fmod_radio_injector.h  fmod_radio_stub.cpp  fmod_radio_stub.h  game_event_monitor.cpp  game_event_monitor.h  game_state_probe.cpp  game_state_probe.h  local_bridge_client.cpp  local_bridge_client.h  logger.cpp  logger.h  shared_audio_read_test.cpp  shared_audio_reader.cpp  shared_audio_reader.h  version_exports.def  version_proxy.cpp  version_proxy.h  xaudio_shared_player.cpp  xaudio_shared_player.h
scripts/: activate_radio_audio.ps1  build_bridge.ps1  build_hook.ps1  clean.ps1  deactivate_radio_audio.ps1  disable_fmod_probe.ps1  disable_game_events.ps1  disable_inprocess_audio.ps1  enable_fmod_probe.ps1  enable_game_events.ps1  enable_inprocess_audio.ps1  install_radio_replacement.ps1  install_radio_slot.ps1  install_release.ps1  install_version_proxy.ps1  package_release.ps1  request_fmod_probe_scan.ps1  run_bridge.ps1  run_receiver.ps1  run_shared_audio_read_test.ps1  show_hook_log.ps1  uninstall_radio_replacement.ps1  uninstall_radio_slot.ps1  uninstall_release.ps1  uninstall_version_proxy.ps1
(+21 files in other folders)
